updated few endpoint paths
