# swagger.json
@@ -15,7 +15,7 @@
   "basePath": "/",
   "tags": [
     {
-      "name": "users",
+      "name": "[users]",
       "description": "Read-write collection",
       "externalDocs": {
         "description": "Code",
@@ -23,7 +23,7 @@
       }
     },
     {
-      "name": "game-categories",
+      "name": "[game-categories]",
       "description": "Read-only collection",
       "externalDocs": {
         "description": "Code",
@@ -31,7 +31,7 @@
       }
     },
     {
-      "name": "games",
+      "name": "[games]",
       "description": "Read-only collection",
       "externalDocs": {
         "description": "Code",
@@ -39,7 +39,7 @@
       }
     },
     {
-      "name": "highscores",
+      "name": "[highscores]",
       "description": "Read-write collection",
       "externalDocs": {
         "description": "Code",
@@ -55,8 +55,25 @@
   ],
   "paths": {
     "/users": {
+      "get": {
+        "tags": ["[users]"],
+        "summary": "Get all users",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user": {
       "post": {
-        "tags": ["users"],
+        "tags": ["[users]"],
         "summary": "Create new user",
         "parameters": [
           {
@@ -80,26 +97,11 @@
             }
           }
         }
-      },
-      "get": {
-        "tags": ["users"],
-        "summary": "Get all users",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          }
-        }
       }
     },
-    "/users/{fbId}": {
+    "/user/{fbId}": {
       "get": {
-        "tags": ["users"],
+        "tags": ["[users]"],
         "summary": "Get user by Facebook ID",
         "parameters": [
           {
@@ -122,7 +124,7 @@
     },
     "/game-categories": {
       "get": {
-        "tags": ["game-categories"],
+        "tags": ["[game-categories]"],
         "summary": "Get all game categories",
         "responses": {
           "200": {
@@ -139,7 +141,7 @@
     },
     "/games": {
       "get": {
-        "tags": ["games"],
+        "tags": ["[games]"],
         "summary": "Get all games",
         "responses": {
           "200": {
@@ -154,9 +156,9 @@
         }
       }
     },
-    "/highscores": {
+    "/highscore": {
       "post": {
-        "tags": ["highscores"],
+        "tags": ["[highscores]"],
         "summary": "Save new highscore",
         "description": "Checks if result is new highscore and if yes, saves it",
         "parameters": [
@@ -185,7 +187,7 @@
     },
     "/highscores/{gameId}": {
       "get": {
-        "tags": ["highscores"],
+        "tags": ["[highscores]"],
         "summary": "Get highscores by gameId",
         "description": "Gets all highscores for the game specified by id",
         "parameters": [
